--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: white;
+    color: rgb(110, 63, 63);
     font-size: 18px;
     padding: 10px 15px;
     transition: 0.3s;
